# punica-server-experimental

./: .gitignore  Cargo.toml  pyproject.toml  rustfmt.toml
docs/: design.txt
ipc-benchmark/: Cargo.toml  pipe-subprocess.py  uds-subprocess.py
python/punica_runner/: pyproject.toml  requirements.txt  setup.py
python/punica_runner/punica_runner/: __init__.py  ops.py
python/punica_runner/punica_runner/device_query/: __main__.py
python/punica_runner/punica_runner/gpu_executor/: __main__.py  gpu_executor.py
python/punica_runner/punica_runner/models/: __init__.py  llama.py  llama_lora.py
python/punica_runner/punica_runner/utils/: __init__.py  kvcache.py
python/punica_runner/src/punica_runner/: __init__.py  __main__.py
rust/: Cargo.toml  rustfmt.toml
rust/src/: comm.rs  lib.rs  loadgen.rs  main.rs  model_config.rs  msg.rs  paged_kv_tracker.rs  scheduler_client.rs  utils.rs
rust/src/frontend/: api.rs  api_server.rs  frontend_main.rs  mod.rs  scheduler_client.rs
rust/src/runner/: conn.rs  debug_executor_main.rs  device_query.rs  executor.rs  mod.rs  runner.rs  runner_main.rs  tokenizer.rs
rust/src/scheduler/: _save.rs  mod.rs  scheduler.rs  scheduler_main.rs  server.rs  traits.rs
tools/loadgen/: example-trace.txt  loadgen.py
