[package]
name = "punica"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.26"
pyo3 = { version = "0.19.2", features = ["auto-initialize"] }
serde = { version = "1.0.185", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v7", "serde", "fast-rng"] }

[build-dependencies]
